--- a/translations/data/desktop/de.po
+++ b/translations/data/desktop/de.po
@@ -3,13 +3,17 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Pier Luigi Fiorini <pierluigi.fiorini@gmail.com>, 2020
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-05-09 01:43+0000\n"
+"POT-Creation-Date: 2020-05-09 02:10+0200\n"
 "PO-Revision-Date: 2020-05-09 00:20+0000\n"
+"Last-Translator: Pier Luigi Fiorini <pierluigi.fiorini@gmail.com>, 2020\n"
 "Language-Team: German (https://www.transifex.com/lirios/teams/71982/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,15 +23,15 @@ msgstr ""
 
 #: data/io.liri.Text.desktop.in.in:3
 msgid "Liri Text"
-msgstr ""
+msgstr "Liri Text"
 
 #: data/io.liri.Text.desktop.in.in:4
 msgid "Text Editor"
-msgstr ""
+msgstr "Textbearbeitungsprogramm"
 
 #: data/io.liri.Text.desktop.in.in:5
 msgid "Edit text files"
-msgstr ""
+msgstr "Textdateien bearbeiten"
 
 #: data/io.liri.Text.desktop.in.in:11
 msgid "Qt;Utility;TextEditor;"
@@ -35,8 +39,4 @@ msgstr ""
 
 #: data/io.liri.Text.desktop.in.in:12
 msgid "Text;Editor;"
-msgstr ""
-
-#: data/io.liri.Text.desktop.in.in:13
-msgid "io.liri.Text"
 msgstr ""
